# stainology-paper

./: .gitignore  README.MD  pyproject.toml
data_extraction/: abstract_data_extraction.py  abstracts_data_extraction_prompts.py  classify_according_to_who.py  data_loaders.py  paper_list_from_query.ipynb  run_in_parallel.py  stains.txt  stains_from_first_data_extraction.txt  table_data_extraction.py  table_extraction_prompts.py  table_relevance.ipynb  table_relevance_prompt.py  utils.py  who_classification_prompt.py
post_processing/: column_normalizer.py  consts.py  convert_to_html.py  deduplication.py  droppers.py  expression_types_utils.py  group_utils.py  inconsistencies.py  io_utils.py  loaders.py  math.py  merge_by_table.py  overwrites.py  pattern.py  pipeline_utils.py  remover_utils.py  string_cleaners.py  tables_to_drop.py  tumour_mapper.py  variations_dicts.py
post_processing/additional/: loaders.py  utils.py
post_processing/notebooks/: final_pipeline_updated.ipynb  who_classification_metrics.ipynb
