[project]
name = "stainology-paper"
version = "0.1.0"
description = "Code used for the Stainology paper."
requires-python = ">=3.10"
dependencies = [
    "fastparquet>=2026.5.0",
    "google-genai>=1.50.1",
    "langchain>=1.0.2",
    "levenshtein>=0.27.3",
    "litellm>=1.79.0",
    "markdown>=3.10",
    "notebook>=7.4.7",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "pyarrow>=24.0.0",
    "pydantic>=2.12.3",
    "scikit-learn>=1.7.2",
    "tqdm>=4.67.1",
]
